update maths & mangle hw

--- a/morea/03.strings/phw3.html
+++ b/morea/03.strings/phw3.html
@@ -65,7 +65,7 @@
 
 <h2 id="setup">Setup</h2>
 
-<p>In the PyCharm sandbox, create two python files: <code>maths.py</code> &amp; <code>mangle.py</code>. (If you’ve forgotten how to do that, refer back to <a href="http://emhill.github.io/150/morea/01.unix/phw1.html">the previous HW</a>.)</p>
+<p>In PyCharm, create two python files: <code>maths.py</code> &amp; <code>mangle.py</code>. <!--(If you've forgotten how to do that, refer back to [the previous HW](http://emhill.github.io/150/morea/01.unix/phw1.html).)--></p>
 
 <p><em>Don’t forget to add a comment at the top of each program with your name and what the program does.</em></p>
 
@@ -155,7 +155,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.-->
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-07-08 14:07:28 -0400</span></p>
+       Last update on: <span>2016-07-08 14:08:48 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
