--- a/morea/03.strings/phw3.html
+++ b/morea/03.strings/phw3.html
@@ -111,6 +111,10 @@
   </tbody>
 </table>
 
+<p>Hints:
+  * How do we convert a string to upper case? Try googling! You can also look at the slides &amp; textbook readings.
+  * How do we remove from strings using only slices (i.e., [:])?</p>
+
 <!--## Submission
 
 Once you're satisfied that your programs are working correctly, take a screenshot of each program open in the editor, with its output displayed in the console, and submit to google classroom. You should submit 2 screenshots.-->
@@ -155,7 +159,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.-->
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-07-08 14:08:48 -0400</span></p>
+       Last update on: <span>2016-07-12 10:30:23 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
