maths & mangle hw hints

--- a/morea/03.strings/phw3.html
+++ b/morea/03.strings/phw3.html
@@ -111,9 +111,12 @@
   </tbody>
 </table>
 
-<p>Hints:
-  * How do we convert a string to upper case? Try googling! You can also look at the slides &amp; textbook readings.
-  * How do we remove from strings using only slices (i.e., [:])?</p>
+<p><strong>Hints:</strong></p>
+
+<ul>
+  <li>How do we convert a string to upper case? Try googling! You can also look at the slides &amp; textbook readings.</li>
+  <li>How do we remove from strings using only slices (i.e., [:])?</li>
+</ul>
 
 <!--## Submission
 
@@ -159,7 +162,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.-->
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-07-12 10:30:23 -0400</span></p>
+       Last update on: <span>2016-07-12 10:30:50 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
