maths & mangle hw hints

--- a/morea/03.strings/phw3.html
+++ b/morea/03.strings/phw3.html
@@ -111,7 +111,7 @@
   </tbody>
 </table>
 
-<p><strong>Hints:</strong></p>
+<h3 id="hints">Hints:</h3>
 
 <ul>
   <li>How do we convert a string to upper case? Try googling! You can also look at the slides &amp; textbook readings.</li>
@@ -162,7 +162,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.-->
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-07-12 10:30:50 -0400</span></p>
+       Last update on: <span>2016-07-12 10:31:53 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
