maths & mangle hw hints

--- a/morea/03.strings/phw3.html
+++ b/morea/03.strings/phw3.html
@@ -74,7 +74,7 @@
 <p>Write a program <code>maths.py</code> that takes a number as input from the user and prints out the following information using the math module:</p>
 
 <ol>
-  <li>The floor of the number (e.g., <code>floor(3.75)</code> is 3)</li>
+  <li>The floor of the number using the math module (e.g., <code>floor(3.75)</code> is 3)</li>
   <li>The absolute value of the number (this should be stored as a variable called <code>absolute_value</code>)</li>
   <li>The square root of <code>absolute_value</code> rounded to 2 decimal places <!-- factorial --></li>
   <li><code>absolute_value</code> times -1</li>
@@ -162,7 +162,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.-->
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-07-12 10:31:53 -0400</span></p>
+       Last update on: <span>2016-07-12 11:09:54 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
