--- a/morea/03.strings/project1.html
+++ b/morea/03.strings/project1.html
@@ -198,7 +198,7 @@ For example:
     </tr>
     <tr>
       <td style="text-align: center">hello</td>
-      <td style="text-align: center">HLL</td>
+      <td style="text-align: center">HLO</td>
       <td style="text-align: center">ell</td>
     </tr>
     <tr>
@@ -217,7 +217,7 @@ For example:
 
 <h2 id="madlibspy">madlibs.py</h2>
 
-<p>Create a program <code>madlibs.py</code> that takes at least 6 parts of speech from the user as input, and should include <strong><em>at least</em></strong> one of each of the following parts of speech:</p>
+<p>Create a program <code>madlibs.py</code> that takes at least 6 parts of speech from the user as input, and outputs a story using those words. Your program should include <strong><em>at least</em></strong> one of each of the following parts of speech:</p>
 
 <ul>
   <li>Noun</li>
@@ -269,7 +269,7 @@ For example:
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-07-12 11:09:54 -0400</span></p>
+       Last update on: <span>2016-07-12 12:32:47 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
