--- a/morea/03.strings/project1.html
+++ b/morea/03.strings/project1.html
@@ -194,7 +194,7 @@ For example:
     <tr>
       <td style="text-align: center">Monty Python</td>
       <td style="text-align: center">mNTY pYTHN</td>
-      <td style="text-align: center">y P</td>
+      <td style="text-align: center">’ Py’</td>
     </tr>
     <tr>
       <td style="text-align: center">hello</td>
@@ -204,7 +204,7 @@ For example:
     <tr>
       <td style="text-align: center">oh</td>
       <td style="text-align: center">OH</td>
-      <td style="text-align: center">’’</td>
+      <td style="text-align: center">oh</td>
     </tr>
   </tbody>
 </table>
@@ -269,7 +269,7 @@ For example:
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-07-12 12:32:47 -0400</span></p>
+       Last update on: <span>2016-07-12 12:39:43 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
