--- a/morea/03.strings/project1.html
+++ b/morea/03.strings/project1.html
@@ -192,9 +192,9 @@ For example:
   </thead>
   <tbody>
     <tr>
-      <td style="text-align: center">Monty Python</td>
-      <td style="text-align: center">mNTY pYTHN</td>
-      <td style="text-align: center">’ Py’</td>
+      <td style="text-align: center">Monty Python!!</td>
+      <td style="text-align: center">mNTY pYTHN!!</td>
+      <td style="text-align: center">‘Pyt’</td>
     </tr>
     <tr>
       <td style="text-align: center">hello</td>
@@ -269,7 +269,7 @@ For example:
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-07-12 12:39:43 -0400</span></p>
+       Last update on: <span>2016-07-12 12:41:43 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
