--- a/morea/03.strings/project1.html
+++ b/morea/03.strings/project1.html
@@ -202,9 +202,9 @@ For example:
       <td style="text-align: center">ell</td>
     </tr>
     <tr>
-      <td style="text-align: center">oh</td>
-      <td style="text-align: center">OH</td>
-      <td style="text-align: center">oh</td>
+      <td style="text-align: center">oh!</td>
+      <td style="text-align: center">OH!</td>
+      <td style="text-align: center">oh!</td>
     </tr>
   </tbody>
 </table>
@@ -269,7 +269,7 @@ For example:
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-07-12 12:41:43 -0400</span></p>
+       Last update on: <span>2016-07-12 12:42:37 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
