--- a/morea/03.strings/project1.html
+++ b/morea/03.strings/project1.html
@@ -193,7 +193,7 @@ For example:
   <tbody>
     <tr>
       <td style="text-align: center">Monty Python!!</td>
-      <td style="text-align: center">mNTY pYTHN!!</td>
+      <td style="text-align: center">mNTY pYTHON!</td>
       <td style="text-align: center">‘Pyt’</td>
     </tr>
     <tr>
@@ -269,7 +269,7 @@ For example:
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-07-12 12:42:37 -0400</span></p>
+       Last update on: <span>2016-07-13 10:56:11 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
