--- a/morea/04.flow/phw4.html
+++ b/morea/04.flow/phw4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> PHW4 | CSCI 150 </title>
+  <title> HW | CSCI 150 </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
 
@@ -54,9 +54,9 @@
 
 
 <div class="container">
-  <h1 id="practice-hw4-input--ifs">Practice HW4: Input &amp; Ifs</h1>
+  <h1 id="hw-input--ifs">HW: Input &amp; Ifs</h1>
 
-<p>In this practice HW you will create 3 programs that explore getting user input and using if statements.</p>
+<p>In this HW you will create 3 programs that explore getting user input and using if statements.</p>
 
 <p><span class="h4">
   <span style="padding: 2px" class="label label-success">Rx: &lt;15 min</span>
@@ -93,34 +93,33 @@
 
 <p>Create a program that asks the user for a whole number and prints whether it’s a multiple of 5. Make sure to test the program by inputting numbers that are multiples of 5 as well as those that aren’t multiples of 5. (<em>Hint</em>: what arithmetic operator can you use to determine whether a number is a multiple of another?)</p>
 
-<h2 id="demonstration">Demonstration</h2>
+<!--## Demonstration
 
-<p>Once you’ve finished doing the HW a single time, you can watch me do it:</p>
+
+Once you've finished doing the HW a single time, you can watch me do it:
 
 <div class="video-container">
-  <iframe src="http://www.youtube.com/embed/gHFuYMWDa28" frameborder="0" allowfullscreen=""></iframe>
+  <iframe  src="http://www.youtube.com/embed/gHFuYMWDa28" frameborder="0" allowfullscreen></iframe>
 </div>
 
-<h2 id="standard-practice-hw-caveats">Standard Practice HW Caveats</h2>
+## Standard Practice HW Caveats
 
-<p>You’ll learn significantly less from watching me solve the
-HW if you haven’t attempted the HW yourself first.</p>
+You’ll learn significantly less from watching me solve the
+HW if you haven’t attempted the HW yourself first.
 
-<p>While it’s an achievement to finish the HW no matter how long it takes, you
-might experience “diminishing returns” if you work longer than the DNF (Did Not Finish)
+While it's an achievement to finish the HW no matter how long it takes, you
+might experience "diminishing returns" if you work longer than the DNF (Did Not Finish)
 time. Thus, it might be strategic to stop working at the DNF time and watch
-my solution.</p>
+my solution.
 
-<p>After watching my solution, I recommend that you repeat the HW if you
-have not achieved at least Av (Average) performance. If so, be sure to:</p>
+After watching my solution, I recommend that you repeat the HW if you
+have not achieved at least Av (Average) performance. If so, be sure to:
 
-<ul>
-  <li>Delete your old project so you cannot refer to it;</li>
-  <li>Don’t look at my screencast while you HW; and</li>
-  <li>Reset your timer.</li>
-</ul>
+  * Delete your old project so you cannot refer to it;
+  * Don’t look at my screencast while you HW; and
+  * Reset your timer.
 
-<p>Feel free to keep trying until you make Rx if that’s of interest to you.</p>
+Feel free to keep trying until you make Rx if that’s of interest to you.-->
 
 </div>
 
@@ -135,7 +134,7 @@ have not achieved at least Av (Average) performance. If so, be sure to:</p>
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-07-13 10:56:11 -0400</span></p>
+       Last update on: <span>2016-07-14 00:35:14 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
