--- a/morea/03.strings/project1.html
+++ b/morea/03.strings/project1.html
@@ -203,7 +203,7 @@ For example:
     </tr>
     <tr>
       <td style="text-align: center">oh!</td>
-      <td style="text-align: center">OH!</td>
+      <td style="text-align: center">O!</td>
       <td style="text-align: center">oh!</td>
     </tr>
   </tbody>
@@ -269,7 +269,7 @@ For example:
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-07-14 10:35:29 -0400</span></p>
+       Last update on: <span>2016-07-14 12:20:30 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
