--- a/morea/05.functions/phw4.html
+++ b/morea/05.functions/phw4.html
@@ -140,9 +140,9 @@ Write a function `is_odd` that takes a number as a parameter and returns true if
 ***
 </code></pre>
 
-<h3 id="submission">Submission</h3>
+<!--### Submission
 
-<p>Once you’re satisfied that your programs are working correctly, take a screenshot of each program open in the editor, with its output displayed in the console, and submit to google classroom. You should submit 3 screenshots.</p>
+Once you're satisfied that your programs are working correctly, take a screenshot of each program open in the editor, with its output displayed in the console, and submit to google classroom. You should submit 3 screenshots.-->
 
 <!-- Started @ 11:35 -->
 
@@ -159,7 +159,7 @@ Write a function `is_odd` that takes a number as a parameter and returns true if
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-07-14 12:20:30 -0400</span></p>
+       Last update on: <span>2016-07-18 16:44:08 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
