--- a/morea/11.oo/phw.html
+++ b/morea/11.oo/phw.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> HW11 | CSCI 150 </title>
+  <title> Project 3 | CSCI 150 </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
 
@@ -54,9 +54,9 @@
 
 
 <div class="container">
-  <h1 id="hw11-objects-in-python">HW11: Objects in Python</h1>
+  <h1 id="project-3-objects-in-python">Project 3: Objects in Python</h1>
 
-<p>In this practice HW you will implement the <code>Date</code> class we began during lecture.</p>
+<p>In this project you will implement and test a <code>Date</code> class.</p>
 
 <!--<span class="h4">
   <span style="padding: 2px" class="label label-success">Rx: <45 min</span>
@@ -361,7 +361,35 @@ False                           # so it should be False
 
 <p>You can check your own date arithmetic with this website: <a href="http://www.timeanddate.com/date/dateadd.html">http://www.timeanddate.com/date/dateadd.html</a>.</p>
 
+<h3 id="main">main</h3>
+
+<p>Make sure your main class tests all the functionality that you have implemented: <code>isAfter</code>, <code>tomorrow</code>, <code>addNDays</code>. How do you know if your methods are implemented correctly? Does running each method once verify their correctness, or do you need to run them multiple times? For example, there are many different scenarios that can occur for the end of a month or the end of a year (leap year or not). Make sure you test all the cases you can think of.</p>
+
 <p><em>Assignment adapted from <a href="https://www.cs.hmc.edu/twiki/bin/view/CS5/Lab10">Harvey Mudd’s CS 5 Virtual Art Lab</a>.</em></p>
+
+<h1 id="grading">Grading</h1>
+
+<p>You will be graded on the following:</p>
+
+<ul>
+  <li><strong>Correctness</strong>: Your code should perform as specified. Correctness will count for the largest portion of your grade.</li>
+  <li><strong>Testing</strong>: How well did you verify that your program meets the specification? This will be the second largest portion of your grade.</li>
+  <li><strong>Docstrings</strong>: For each class &amp; method that you design from scratch, write a good docstring (<code>"""</code>). </li>
+  <li><strong>Internal comments</strong>: Within functions, the more complicated parts of your code should also be described using “internal” comments (i.e., docstrings).</li>
+  <li><strong>Programming style</strong>: Your variable names should be meaningful and your code as simple and clear as possible.</li>
+  <li><strong>Formatting style</strong>: Each line should be less than 80 characters long including spaces. You should break up long lines using <code>\</code>. </li>
+</ul>
+
+<h1 id="submitting">Submitting</h1>
+
+<p>When complete, your project should include the following python files:</p>
+
+<ul>
+  <li><code>date.py</code></li>
+  <li><code>main.py</code></li>
+</ul>
+
+<p>Zip your project using the same steps as for the earlier project, giving the zip file the same name as your <code>project3_uLogin</code> folder name, and submit to canvas.</p>
 
 <!--## Demonstration
 
@@ -404,7 +432,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.-->
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-07-18 16:44:08 -0400</span></p>
+       Last update on: <span>2016-07-18 17:16:06 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
