--- a/morea/05.functions/phw4.html
+++ b/morea/05.functions/phw4.html
@@ -146,6 +146,32 @@ Once you're satisfied that your programs are working correctly, take a screensho
 
 <!-- Started @ 11:35 -->
 
+<h2 id="select-solutions">Select Solutions</h2>
+
+<!--The solutions below are to the right. Scroll over to see them!
+-->
+<!-- Highlight them or copy/paste to see them!-->
+
+<h3 id="ismultiplepy-1">is_multiple.py</h3>
+
+<pre><code>def is_multiple(num, m):
+  return num % m == 0
+
+print(is_multiple(5))
+print(is_multiple(6))
+</code></pre>
+
+<h3 id="rectanglepy-1">rectangle.py</h3>
+
+<pre><code>def rectangle(w, h):
+  for i in range(h):
+     print(w * "*")
+
+width = eval(input("Enter width: "))
+height = eval(input("Enter height: "))
+rectangle(width, height)
+</code></pre>
+
 </div>
 
 
@@ -159,7 +185,7 @@ Once you're satisfied that your programs are working correctly, take a screensho
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-07-18 17:16:06 -0400</span></p>
+       Last update on: <span>2016-07-20 11:40:41 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
