--- a/morea/07.lists/phw.html
+++ b/morea/07.lists/phw.html
@@ -86,7 +86,56 @@
 
 <h2 id="solution">Solution</h2>
 
-<p>When you’ve attempted the PHW, you can see my solution below.</p>
+<p>When you’ve attempted the PHW, you can see my solution below. Scroll down!</p>
+
+<p><br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br /></p>
 
 <pre><code>&gt;&gt;&gt; print([12 for x in range(12)])
 [12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12]
@@ -123,7 +172,7 @@
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-07-20 11:42:16 -0400</span></p>
+       Last update on: <span>2016-07-27 10:37:07 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
