--- a/morea/09.files/pwod.html
+++ b/morea/09.files/pwod.html
@@ -124,6 +124,16 @@ while value != sentinel:
   <li>You should add the file names <code>text1.txt</code>, <code>text2.txt</code>, and <code>text3.txt</code> to a list, so you don’t have to copy &amp; paste your code.</li>
 </ul>
 
+<p><strong><em>Recommended Development Steps:</em></strong></p>
+
+<ol>
+  <li>Create 3 text files</li>
+  <li>Make a list of the filenames</li>
+  <li>Make a loop to print each file</li>
+  <li>Modify your loop to print the number of lines</li>
+  <li>Output the number of lines to <code>counts.txt</code> instead</li>
+</ol>
+
 <!--## Demonstration
 
 
@@ -182,7 +192,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-07-20 11:42:16 -0400</span></p>
+       Last update on: <span>2016-07-27 10:37:07 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
