--- a/morea/11.oo/phw.html
+++ b/morea/11.oo/phw.html
@@ -363,7 +363,7 @@ False                           # so it should be False
 
 <h3 id="main">main</h3>
 
-<p>Make sure your main class tests all the functionality that you have implemented: <code>isAfter</code>, <code>tomorrow</code>, <code>addNDays</code>. How do you know if your methods are implemented correctly? Does running each method once verify their correctness, or do you need to run them multiple times? For example, there are many different scenarios that can occur for the end of a month or the end of a year (leap year or not). Make sure you test all the cases you can think of.</p>
+<p>Your main class should be a program that tests all of the functionality that you added to your Date class. Make sure your main class tests all the functionality that you have implemented: <code>isAfter</code>, <code>tomorrow</code>, <code>addNDays</code>. How do you know if your methods are implemented correctly? Does running each method once verify their correctness, or do you need to run them multiple times? For example, there are many different scenarios that can occur for the end of a month or the end of a year (leap year or not). Make sure you test all the cases you can think of.</p>
 
 <p><em>Assignment adapted from <a href="https://www.cs.hmc.edu/twiki/bin/view/CS5/Lab10">Harvey Mudd’s CS 5 Virtual Art Lab</a>.</em></p>
 
@@ -432,7 +432,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.-->
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-07-27 10:37:07 -0400</span></p>
+       Last update on: <span>2016-07-27 11:55:56 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
