attempt 1 to revert to md version

--- a/morea/02.python/phw2.html
+++ b/morea/02.python/phw2.html
@@ -54,7 +54,7 @@
 
 
 <div class="container">
-  <h1 id="hw-unix-hardware--binary">HW: UNIX, Hardware, &amp; Binary</h1>
+  <h1 id="phw-hardware--binary">PHW: Hardware &amp; Binary</h1>
 
 <!--<span class="h4">
   <span style="padding: 2px" class="label label-success">Rx: <10 min</span>
@@ -64,26 +64,24 @@
 </span>
 -->
 
-<h2 id="unix-setup">UNIX Setup</h2>
+<!--## UNIX Setup
 
-<p>Access a UNIX command line by going to: <a href="http://www.tutorialspoint.com/unix_terminal_online.php">http://www.tutorialspoint.com/unix_terminal_online.php</a></p>
+Access a UNIX command line by going to: [http://www.tutorialspoint.com/unix_terminal_online.php](http://www.tutorialspoint.com/unix_terminal_online.php)
 
-<h2 id="exploring-the-unix-command-line">Exploring the UNIX command line</h2>
+## Exploring the UNIX command line
 
-<p>Read through the following tutorial: <a href="http://www.davidbaumgold.com/tutorials/command-line/">http://www.davidbaumgold.com/tutorials/command-line/</a>. Then, open your <a href="http://www.tutorialspoint.com/unix_terminal_online.php">UNIX terminal</a> and go through the following steps.</p>
+Read through the following tutorial: [http://www.davidbaumgold.com/tutorials/command-line/](http://www.davidbaumgold.com/tutorials/command-line/). Then, open your [UNIX terminal](http://www.tutorialspoint.com/unix_terminal_online.php) and go through the following steps.
 
-<ol>
-  <li>Let’s create a directory for this class. Type <code>mkdir csci150</code>.</li>
-  <li>Type <code>cd csci150</code> to move the terminal to that directory</li>
-  <li>Type <code>touch testfile.txt</code> to create an empty file</li>
-  <li>Type <code>ls</code> in the terminal. Do you see testfile.txt?</li>
-  <li>Type <code>pwd</code> to see what directory your terminal is in.</li>
-  <li>Add your name to the file by typing <code>echo "Your name" &gt; testfile.txt</code></li>
-  <li>In the terminal, type <code>cat testfile.txt</code>. Is your name displayed?</li>
-  <li>Take a single screenshot of your UNIX terminal window with the above commands.</li>
-</ol>
-
-<h2 id="exploring-hardware">Exploring Hardware</h2>
+1. Let’s create a directory for this class. Type `mkdir csci150`.
+1. Type `cd csci150` to move the terminal to that directory
+1. Type `touch testfile.txt` to create an empty file
+1. Type `ls` in the terminal. Do you see testfile.txt?
+1. Type `pwd` to see what directory your terminal is in.
+1. Add your name to the file by typing `echo "Your name" > testfile.txt`
+1. In the terminal, type `cat testfile.txt`. Is your name displayed?
+1. Take a single screenshot of your UNIX terminal window with the above commands.
+-->
+<p>## Exploring Hardware</p>
 
 <p>Fill in the following blanks with: motherboard, processor, memory, hard drive:</p>
 
@@ -100,8 +98,9 @@
   <li>How many pieces of information can be conveyed with a single bit?</li>
   <li>How many bits would you need to represent each of the 50 United States using a unique permutation of bits?</li>
   <li>How many bits are in a byte?</li>
-  <li>What is the binary representation of the number 3?</li>
-  <li>What is the encoding standard used to convert text into ordinal numbers?</li>
+  <li>What is the binary representation of the number 33?</li>
+  <li>What is the decimal representation of the number 110011?</li>
+  <li>Name one encoding standard used to convert text into ordinal numbers?</li>
 </ol>
 
 <!--## UNIX Command Overview
@@ -279,7 +278,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-07-27 11:55:56 -0400</span></p>
+       Last update on: <span>2016-08-30 13:51:29 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
