binary phw typo fix

--- a/morea/02.python/phw2.html
+++ b/morea/02.python/phw2.html
@@ -81,7 +81,8 @@ Read through the following tutorial: [http://www.davidbaumgold.com/tutorials/com
 1. In the terminal, type `cat testfile.txt`. Is your name displayed?
 1. Take a single screenshot of your UNIX terminal window with the above commands.
 -->
-<p>## Exploring Hardware</p>
+
+<h2 id="exploring-hardware">Exploring Hardware</h2>
 
 <p>Fill in the following blanks with: motherboard, processor, memory, hard drive:</p>
 
@@ -278,7 +279,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-08-30 13:51:29 -0400</span></p>
+       Last update on: <span>2016-08-30 13:54:00 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
